--- a/BankTask/App.config
+++ b/BankTask/App.config
@@ -15,7 +15,7 @@
       </dependentAssembly>
 		<connectionStrings>
 			<add name="ApplicationDbContext"
-				 connectionString="Host=localhost;Port=5432;Database=BankTaskDb1;Username=postgres;Password=123"
+				 connectionString="Host=localhost;Port=5432;Database=BankTaskDb;Username=postgres;Password=123"
 				 providerName="Npgsql" />
 		</connectionStrings>
       <dependentAssembly>
